# MeshProc

./: .gitignore  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  MeshProc.sln  README.md  demo.lua  meshproc_icon.afdesign  packages.config  restore-dependencies.ps1  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yaml  dependabot-postprocess.yaml
MeshProc/: AbstractCommand.cpp  AbstractCommand.h  CloseLoopWithPin.cpp  CloseLoopWithPin.h  CmdLineArgs.cpp  CmdLineArgs.h  CollapseTriangles.h  CommandFactory.cpp  CommandFactory.h  CommandRegistration.cpp  CommandRegistration.h  Convex2DHull.cpp  Convex2DHull.h  CubeGenerator.cpp  CubeGenerator.h  CutHalfSpace.cpp  CutHalfSpace.h  DeleteTriangles.cpp  DeleteTriangles.h  DevPlayground.cpp  DevPlayground.h  DisplacementNoise.h  Extract2DLoops.cpp  Extract2DLoops.h  ExtractSubMesh.cpp  FlatLoop.cpp  FlatLoop.h  FlatSkirt.cpp  FlatSkirt.h  LinearExtrude.cpp  LinearExtrude.h  LuaRunner.cpp  LuaRunner.h  ManipulateVertices.cpp  ManipulateVertices.h  MeasureBoundingBox.h  Mesh.cpp  Mesh.h  MeshProc.cpp  MeshProc.vcxproj  (+41 more)
MeshProc/_deprecated/: BakeTransform.cpp  BakeTransform.h  CloseLoopWithPin.h  CollapseTriangles.cpp  CutHalfSpace.h  DevPlayground.h  DisplacementNoise.cpp  ExtractSubMesh.h  IndicesBoolean.cpp  IndicesBoolean.h  MatchShape2D.cpp  MeasureBoundingBox.cpp  MeshSmooth.h  OpenBorder.cpp  OpenBorder.h  SelectTrianglesFromSelectedVertices.cpp  SelectVertices.cpp  SelectVertices.h
MeshProc/algo/: LoopsFromEdges.h
MeshProc/commands/: AbstractCommand.cpp  AbstractCommand.h  CommandRegistration.cpp  CommandRegistration.inc  Parameter.h
MeshProc/data/: HalfSpace.cpp  HalfSpace.h  HashableEdge.h  Mesh.cpp  Mesh.h  Scene.h  Shape2D.cpp  Triangle.cpp  Triangle.h
MeshProc/fitting/: MorphRotateOutline.cpp  MorphRotateOutline.h
MeshProc/generator/: CrystalGrain.cpp  CrystalGrain.h  Cube.cpp  Cube.h  Cuboid.cpp  Cuboid.h  Icosahedron.cpp  Icosahedron.h  LinearExtrude2DMesh.cpp  LinearExtrude2DMesh.h  RotateExtrude2DMesh.cpp  RotateExtrude2DMesh.h  SphereIco.cpp  SphereIco.h  VertexNormals.cpp
MeshProc/io/: CsvShape2DReader.cpp  CsvShape2DReader.h  CsvShape2DWriter.cpp  CsvShape2DWriter.h  ObjMeshWriter.cpp  ObjReader.cpp  ObjReader.h  ObjWriter.cpp  ObjWriter.h  PlyReader.cpp  PlyReader.h  PlyWriter.cpp  PlyWriter.h  StlReader.cpp  StlReader.h  StlWriter.cpp  StlWriter.h  SvgShape2DWriter.cpp
MeshProc/lua/: AbstractMultiType.h  AbstractType.h  CallbackFunction.cpp  CommandCreator.cpp  CommandCreator.h  CommandType.cpp  CommandType.h  GlmMat4Type.cpp  GlmMat4Type.h  GlmVec2Type.cpp  GlmVec2Type.h  GlmVec3Type.cpp  GlmVec3Type.h  IndicesType.cpp  IndicesType.h  ListOfVec3Type.cpp  ListOfVec3Type.h  LogFunctions.cpp  LogFunctions.h  LuaResources.h  LuaResources.rc  LuaUtilities.cpp  LuaUtilities.h  MeshType.cpp  MeshType.h  MultiIndicesType.cpp  MultiMeshType.cpp  MultiMeshType.h  MultiVertexSelectionType.cpp  MultiVertexSelectionType.h  Runner.cpp  Runner.h  SceneType.cpp  SceneType.h  Shape2DType.cpp  Shape2DType.h  VersionCheck.cpp  VertexSelectionType.cpp  VertexSelectionType.h
MeshProc/utilities/: Constrained2DTriangulation.cpp  Constrained2DTriangulation.h  LoopsFromEdges.h  StringUtilities.cpp  StringUtilities.h  Vec2Intersections.cpp  Vec2Intersections.h
cmake/: FindGLM.cmake  FindLua.cmake  FindSGrottelSimpleLog.cmake  FindSGrottelYaclap.cmake
extra/LinearPlotPreview/: App.xaml  App.xaml.cs  LinearPlotPreview.csproj  LinearPlotPreview.slnx  MainWindow.xaml  MainWindow.xaml.cs
extra/PlySelectorReceiver/: App.xaml  App.xaml.cs  MainWindow.xaml  (+5 more)
extra/perf_looper/: CMakeLists.txt  CMakeSettings.json  main.cpp
src/: CMakeLists.txt  MeshProc.cpp  MeshProc.vcxproj  VersionInfo.h  VersionInfo.h.in  demo.lua  vcpkg-configuration.json  vcpkg.json
src/_deprecated/: Convex2DHull.h  ExtractSubMesh.cpp  FlatSkirt.cpp  MatchShape2D.h  MixLoops.cpp  MixLoops.h  MorphMeshLoop.cpp  MorphMeshLoop.h  SelectBottomTriangles.h  SelectVerticesFromSelectedTriangles.cpp
src/_deprecated/io/: SvgShape2DWriter.cpp  SvgShape2DWriter.h
src/commands/: AbstractCommand.h  CommandFactory.cpp  CommandFactory.h  CommandRegistration.cpp  CommandRegistration.h  Parameter.cpp  ParameterBinding.h
src/commands/compute/: LinearColorMap.h  OpenBorder.h  OutsideSurfaceClassification.cpp  OutsideSurfaceClassification.h  SplitByEdges.cpp  SplitByEdges.h  VertexColorFromTriangleColor.cpp  VertexColorFromTriangleColor.h  VertexNormals.h
src/commands/edit/: BlowupFill.cpp  BlowupFill.h  CloseLoopWithPin.h  CutHalfSpace.cpp  CutPlaneLoop.cpp  CutPlaneLoop.h  DisplacementNoise.cpp  DisplacementNoise.h  InvertVertexSelection.cpp  InvertVertexSelection.h  SelectConnectedComponentVertices.cpp  SelectConnectedComponentVertices.h
src/commands/generator/: Cuboid.h  Icosahedron.cpp  Icosahedron.h  Octahedron.cpp  SphereIco.cpp  SphereIco.h
src/commands/io/: Model3mfReader.cpp  Model3mfReader.h  ObjReader.h  PlyReader.cpp  PlyReader.h  PlyWriter.h  StlReader.cpp  StlReader.h  StlWriter.cpp  StlWriter.h
src/data/: HashableEdge.cpp  HashableEdge.h  Shape2D.h
src/lua/: LogFunctions.cpp  LogFunctions.h  LuaUtilities.h  Runner.cpp  VersionCheck.cpp  VersionCheck.h
src/lua/types/: AbstractListType.cpp  AbstractListType.h  AbstractType.h  CommandType.cpp  GlmMat4Type.cpp  GlmVec3ListType.cpp  HalfSpaceType.h  IndexListListType.cpp  IndexListListType.h  IndexListType.cpp  IndexListType.h  MeshListType.cpp  MeshListType.h  MeshType.cpp  MeshType.h  SceneType.cpp
src/utilities/: Constrained2DTriangulation.cpp
test/: Compare-WavefrontObjFiles.ps1  gen-test-obj.lua  run-all.ps1  run-test-VertexEdgeDistanceToCut.ps1  run-test-commands-1.ps1  run-test-cutplaneloop.ps1  run-test-obj.ps1  run-test-selection.ps1  test-VertexEdgeDistanceToCut.lua  test-bars.scad  test-commands-1.lua  test-cutplaneloop.lua  test-obj.scad  test-open-torus.ply  test-open-torus.scad  test-outside-surface.lua  test-outside-surface.scad  test-outside-surface.stl  test-selection.lua  test-torus.scad  test-torus.stl
(+65 files in other folders)
