cmake_minimum_required(VERSION 3.20)

set(MESHPROC_VERSION_MAJOR 0)
set(MESHPROC_VERSION_MINOR 6)
set(MESHPROC_VERSION_PATCH 0)
# Allow CI to override the build number
set(MESHPROC_VERSION_BUILD 0 CACHE STRING "Build number")
set(MESHPROC_VERSION_YEARSTR "2025-2026")

project(MeshProc
    VERSION "${MESHPROC_VERSION_MAJOR}.${MESHPROC_VERSION_MINOR}.${MESHPROC_VERSION_PATCH}.${MESHPROC_VERSION_BUILD}"
    DESCRIPTION "SGrottel's Mesh Processor"
    LANGUAGES CXX
)

add_subdirectory(src)
